--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ads
 
-spring.profiles.active=${ENV:dev}
+spring.profiles.active=${ENV:prod}
 
 #localhost data base connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/ads
